--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,15 @@ flutter:
    # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+  - family: Nunito
+    fonts:
+      - asset: assets/fonts/Nunito-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/Nunito-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Nunito-SemiBold.ttf
+        weight: 600
+      - asset: assets/fonts/Nunito-Bold.ttf
+        weight: 700
   
