--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
   
+  # Localization
+  get: ^4.6.6
+
   # Utils
   intl: ^0.20.2
   logger: ^2.0.2+1
